--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -13,5 +13,6 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
     <p>Lorem, ipsum.</p>
     <h3>level 3</h3>
+    <a href=" https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "></a>
 </body>
 </html>
