--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -10,8 +10,14 @@
 
     </header>
     <main>
-        <p><a href="index.html">Back to home page </a></p>
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Fans gathered outside Oracle Park in San Francisco last night for Kendrick Lamar and SZA’s concert 🎤🏟️ <a href="https://t.co/M6u4c3xs4C">pic.twitter.com/M6u4c3xs4C</a></p>&mdash; DailyRapFacts (@DailyRapFacts) <a href="https://twitter.com/DailyRapFacts/status/1928611164314882222?ref_src=twsrc%5Etfw">May 31, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <article>
+            <p><a href="index.html">Back to home page </a></p>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Fans gathered outside Oracle Park in San Francisco last night for Kendrick Lamar and SZA’s concert 🎤🏟️ <a href="https://t.co/M6u4c3xs4C">pic.twitter.com/M6u4c3xs4C</a></p>&mdash; DailyRapFacts (@DailyRapFacts) <a href="https://twitter.com/DailyRapFacts/status/1928611164314882222?ref_src=twsrc%5Etfw">May 31, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+        </article>
+        <aside>
+            <p>Lorem ipsum dolor sit.</p>
+        </aside>
     </main>
     <footer>
         <p>Made by <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">Ndumiso</a></p>
