Add : adding base index

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -23,7 +23,7 @@
         </aside>
     </main>
     <footer>
-        <p>Made by - <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank"></a></p>
+        <p>Made by Ndumiso - <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
