--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -19,7 +19,7 @@
 
         </article>
         <aside>
-            <p>placeholder to add comment thread later</p>
+            placeholder to add comment thread later
         </aside>
     </main>
     <footer>
