--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,5 +14,6 @@
     <p>Lorem, ipsum.</p>
     <h3>level 3</h3>
     <a href=" https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "></a>
+    <a href="tweets.html"></a>
 </body>
 </html>
