Add : adding base index

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li>
+                <a href="tweets.html"></a>
+            </li>
+            <li></li>
+        </ul>
+
+    </header>
     <h1>level 1</h1>
     <h2>level 2</h2>
     <p>Lorem ipsum dolor sit amet.</p>
@@ -14,6 +23,5 @@
     <p>Lorem, ipsum.</p>
     <h3>level 3</h3>
     <a href=" https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "></a>
-    <a href="tweets.html"></a>
 </body>
 </html>
