Add : adding base index

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,14 +16,21 @@
 
     </header>
     <main>
-        <h1>level 1</h1>
-        <h2>level 2</h2>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolore cum quis voluptates corrupti? Suscipit tenetur inventore vitae quas culpa! Rerum voluptatibus aliquid sit officiis sint iusto dolore reiciendis.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
-        <p>Lorem, ipsum.</p>
-        <h3>level 3</h3>
-        <a href=" https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "></a>
+        <article>
+
+            <h1>level 1</h1>
+            <h2>level 2</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam dolore cum quis voluptates corrupti? Suscipit tenetur inventore vitae quas culpa! Rerum voluptatibus aliquid sit officiis sint iusto dolore reiciendis.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+            <p>Lorem, ipsum.</p>
+            <h3>level 3</h3>
+            <a href=" https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "></a>
+        </article>
+
+        <aside>
+            placeholder to add comment thread later
+        </aside>
 
     </main>
     <footer>
